--- a/components/backend-tests-go-bdewwjhu/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-bdewwjhu/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-bdewwjhu
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-tssc/task-runner:1.8
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-bdewwjhu:c311e99b292090d44b0db24078746fbf79781a0f@sha256:5e226176ab70caee1f22b131ca7ac070fc36120573aec00ced8f74761c92c5f7
+          name: container-image
